--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-map-add-bears",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://192.168.0.49:8443",
   "dependencies": {
     "@reach/combobox": "^0.15.2",
     "@react-google-maps/api": "^2.2.0",
@@ -11,6 +12,8 @@
     "date-fns": "^2.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.19.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "use-places-autocomplete": "^1.9.3",
     "web-vitals": "^1.0.1"
